--- a/module/templates/module.ts.tmpl
+++ b/module/templates/module.ts.tmpl
@@ -1,5 +1,5 @@
-module <%= moduleNamePascalized %> {
+module <%= namePascalized %> {
     'use strict';
 
-    angular.module('<%= moduleNameCamelized %>', []);
+    angular.module('<%= nameCamelized %>', []);
 }
