Added gulp task for static file server.

--- a/directive/templates/directive.ts.tmpl
+++ b/directive/templates/directive.ts.tmpl
@@ -33,5 +33,5 @@ module <%= moduleNamePascalized %> {
         }
     }
 
-    ngModule.directive('<%= nameCamelized %>Directive', <%= namePascalized %>Directive.factory);
+    ngModule.directive('<%= nameCamelized %>', <%= namePascalized %>Directive.factory);
 }
